--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="google-adsense-account" content="ca-pub-4361307844960518">
     <!--Meta Tags End-->
     <!--Title-->
-    <title>Ankit Raj | Portfolio Website</title>
+    <title>Rasel Shikdar | Portfolio Website</title>
     <!--Title End-->
     <!--CSS-->
     <!--Main CSS-->
@@ -40,7 +40,7 @@
             <div class="nav-container">
                 <div class="nav-brand">
                     <img src="assets/IMG/main-logo.png" alt="logo">
-                    <h2>Ankit <span>Raj</span></h2>
+                    <h2>Rasel <span>Shikdar</span></h2>
                     <button id="darkModeToggle" class="dark-togler"><i class="fa-solid fa-moon"></i></button>
                 </div>
                 <div class="nav_link" id="#nav_link">
@@ -69,7 +69,7 @@
                 <div class="main-content-text-text">
                     <h1>
                         <div class="main-content-text-text-text">Hi,</div>
-                        <div class="main-content-text-text-text">I'am <span>Ankit</span></div>
+                        <div class="main-content-text-text-text">I'am <span>Rasel</span></div>
                         <div class="main-content-text-text-text running-text">
                             <span class="role"> </span>
                         </div>
@@ -77,10 +77,10 @@
                     <button class="btn main-btn" onclick="contact();">Contact</button>
                 </div>
                 <div class="main-content-text-social">
-                    <a href="https://www.instagram.com/ankit_gamer69/"><i class="fa fa-instagram"
+                    <a href="https://www.instagram.com/raselshiikdar/"><i class="fa fa-instagram"
                             aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/ankitrajdev"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                    <a href="https://github.com/ankitrajdev"><i class="fa fa-github" aria-hidden="true"></i></a>
+                    <a href="https://www.linkedin.com/in/rasel597"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    <a href="https://github.com/raselshikdar"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
             </div>
             <div class="main-content-image">
@@ -97,14 +97,14 @@
             <div class="main-about-inner">
                 <div class="main-about-image"><img src="assets/IMG/author.jpg" alt="author"></div>
                 <div class="main-about-text">
-                    <p>I am Ankit Raj. A frontend web developer, graphics designer and videoeditor. I am currently
+                    <p>I am Rasel Shikdar. A frontend web developer, graphics designer and videoeditor. I am currently
                         learning frontend (HTML, CSS and JS). I'm currently studying in class 10. I'm from Aurangabad,
                         Bihar, India.</p>
                     <div class="main-about-text-inner">
                         <p><span>Age :</span> 14 Years</p>
-                        <p><span>School :</span> Vivekanand VIP School.</p>
-                        <p><span>Email :</span> ankit_gamer69@hotmail.com</p>
-                        <p><span>Place :</span> Aurangabad, Bihar, India.</p>
+                        <p><span>Education :</span> Govt. Saadat University College, Tangail.</p>
+                        <p><span>Email :</span> info@rasel.work.gd</p>
+                        <p><span>Place :</span> Tangail, Dhaka, Bangladesh.</p>
                     </div>
                     <button class="btn">Resume</button>
                 </div>
