--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                 <div class="main-about-image"><img src="assets/IMG/author.jpg" alt="author"></div>
                 <div class="main-about-text">
                     <p>I am Rasel Shikdar. A frontend web developer, graphics designer and videoeditor. I am currently
-                        learning frontend (HTML, CSS and JS). I'm currently studying in class 10. I'm from Aurangabad,
-                        Bihar, India.</p>
+                        learning frontend (HTML, CSS and JS). I'm Post Graduated in Political Science. I'm from Tangail,
+                        Dhaka, Bangladesh.</p>
                     <div class="main-about-text-inner">
-                        <p><span>Age :</span> 14 Years</p>
-                        <p><span>Education :</span> Govt. Saadat University College, Tangail.</p>
+                        <p><span>Age :</span> 24 Years</p>
+                        <p><span>Education :</span> Govt. Saadat College, Tangail.</p>
                         <p><span>Email :</span> info@rasel.work.gd</p>
                         <p><span>Place :</span> Tangail, Dhaka, Bangladesh.</p>
                     </div>
@@ -403,7 +403,7 @@
                 <a href="https://github.com/ankitrajdev"><i class="fa fa-github" aria-hidden="true"></i></a>
             </div>
             <div class="footer_lower_text">
-                <p>&copy;<a href="#">Ankit Raj</a> | All Rights Reserved.</p>
+                <p>&copy;<a href="#">Rasel Shikdar</a> | All Rights Reserved.</p>
             </div>
         </div>
     </footer>
