--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <!--Meta Tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Welcome to Ankit Raj portfolio website.">
-    <meta name="author" content="Ankit Raj">
+    <meta name="description" content="Welcome to Rasel Shikdar's portfolio website.">
+    <meta name="author" content="Rasel Shikdar">
     <meta name="keywords"
-        content="website, Portfolio, github, html, css, webdev, googlefont, ankit, Ankit raj, freehost, html project">
+        content="website, Portfolio, github, html, css, webdev, googlefont, Rasel, Rasel Shikdar, freehost, html project">
     <meta name="google-site-verification" content="-_vGTZ4HnVXhPBb64aXsyhaFefMCewkbBGKhiUa_xZg">
     <meta name="google-adsense-account" content="ca-pub-4361307844960518">
     <!--Meta Tags End-->
