--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         Dhaka, Bangladesh.</p>
                     <div class="main-about-text-inner">
                         <p><span>Age :</span> 24 Years</p>
-                        <p><span>Education :</span> Govt. Saadat College, Tangail.</p>
+                        <p><span>Education :</span> Govt. Saadat College.</p>
                         <p><span>Email :</span> info@rasel.work.gd</p>
                         <p><span>Place :</span> Tangail, Dhaka, Bangladesh.</p>
                     </div>
